--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Alex Lyakishev
 logo: assets/img/VFSheadshot2024.jpg
-description: Aspiring Mechanical Engineer
+#description: Aspiring Mechanical Engineer
 theme: jekyll-theme-minimal
